examples/test/testpolicy4950.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4950
  namespace: namespace465
spec:
  podSelector:
    matchLabels:
      key46: value31
      key0: value7
      key41: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value41
          key42: value15
      podSelector:
        matchLabels:
          key14: value39
          key31: value21
